# rust-gpa-web

./: Cargo.toml
src/: model.rs
